--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Matrix Clock</title>
-    <link href="https://fonts.googleapis.com/css?family=Kosugi+Maru;subset=japanese" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kosugi+Maru" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
